# pulumi

./: .appveyor.yml  .bazelignore  .bazelrc  .changie.yaml  .custom-gcl.yml  .dockerignore  .envrc.template  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .golangci.yml  .goreleaser.build.darwin.yml  .goreleaser.build.linux.yml  .goreleaser.build.windows.yml  .goreleaser.build.yml  .goreleaser.prerelease.yml  .goreleaser.test.yml  .goreleaser.yml  .linelint.yml  .mise.toml  .npmrc  .prettierignore  .readthedocs.yaml  .release-pending  .travis.yml  .version  .yarnrc  .~CHANGELOG.md  AGENTS.md  Agents.md  BAZEL.md  BEST_PRACTICES.md  BUILD.bazel  BUILD.dawn  BUILD.qb  CHANGELOG.md  CHANGELOG_PENDING.md  CLAUDE.md  CODE-OF-CONDUCT.md  (+65 more)
.golangci/: BUILD.bazel  rules.go
bazel/nodejs/: BUILD.bazel  defs.bzl  protoc_wrapper.py
cmd/pulumi-test-language/: BUILD.bazel  README.md  bad_provider.go  fail_on_create_provider.go  go.mod  go.sum  grpc.go  interface.go  interface_test.go  internal_test.go  l1_empty_test.go  l1_main_test.go  l1empty_test.go  l1main_test.go  l2_continue_on_error_test.go  l2_destroy_test.go  l2_large_test.go  l2_resource_asset_test.go  l2_resource_conditional_test.go  l2_resource_simple_component_test.go  l2_resource_simple_test.go  l2continue_on_error_test.go  l2destroy_test.go  l2large_test.go  l2long_test.go  l2parameterizedprovider_test.go  l2resourceasset_test.go  l2resourcesimple_test.go  l2resourcesimplecomponent_test.go  main_test.go  policy_simple_test.go  program_overrides_test.go  runtime_options_test.go  simple_provider.go  snapshot_test.go  snapshots.go  test_host.go  testing.go  tests.go
developer-docs/utils/: BUILD.bazel  jsonschema2md.go
docs/: .gitignore  Makefile  README.md  architecture.md  bazel-status.md  demo.md  deps.md  diagrams.md  documentation.md  faq.md  language.md  language2.md  languages.md  make.py  metadata.md  mupack.md  overview.md  overview2.md  pyproject.toml  requirements.txt  security.md  targets.md  writing.md  xcloud.md
docs/architecture/: README.md  converters.md  languages.md  logging.md  mlcs.md  plugins.md  providers.md
docs/contributing/: README.md  development.md  producing-the-pulumi-cli-and-sdks.md
docs/debugging/: README.md  engine.md  performance.md  providers-and-languages.md
docs/design/: assets.md  clouds.md  cocogl.md  cocojs.md  deps.md  formats.md  graphs.md  idl.md  language.md  languages.md  lumijs.md  mugl.md  mujs.md  mupack.md  nutpack.md  packages.md  resources.md  runtime.md  security.md  stacks.md  targets.md  tools.md  x-cloud.md
docs/documentation/: README.md  writing.md
docs/proposals/: pulumi-cli-agent-improvements.md
docs/references/: README.md  deployment-schema.md  metaschema.md  proto.md.tmpl
docs/sphinx/: conf.py  index.html.template
docs/utils/: go.mod  go.sum  jsonschema2md.go
pkg/asset/: BUILD.bazel  massage.go
pkg/authhelpers/: BUILD.bazel  awsauth.go  awsauth_test.go  gcpauth.go  gcpauth_test.go  s3auth.go  s3auth_test.go
pkg/backend/: AGENTS.md  BUILD.bazel  apply.go  apply_test.go  backend.go  backend_test.go  cancellation_scope.go  client.go  cloud_registry.go  display.go  doc.go  errors.go  host.go  inmemoryPersister.go  journal.go  journal.srv.txt  journal.txt  journal_byte_string_test.go  journal_extension_test.go  journal_test.go  journaler_snapshot_test.go  login_manager.go  logs.go  logs_test.go  mock.go  multistack.go  organizations.go  organizations_test.go  package_registry.go  patcher.srv.txt  patcher.txt  policypack.go  provider_env.go  provider_env_test.go  query.go  secrets.go  secrets_test.go  snapshot.go  snapshot_test.go  stack.go  (+7 more)
pkg/channel/: BUILD.bazel  channel.go  channel_test.go
pkg/codegen/: AGENTS.md  BUILD.bazel  Makefile  README.md  docs.go  docs_integ_test.go  docs_integration_test.go  docs_test.go  go.mod  go.sum  programs.md  resource_options.go  sdks.md  utilities.go  utilities_strings.go  utilities_test.go  utilities_types.go  utilities_types_test.go
pkg/display/: BUILD.bazel  json.go
pkg/engine/: AGENTS.md  BUILD.bazel  check.go  check_test.go  combinedManager.go  combined_manager.go  combined_manager_test.go  compiler.go  config_delete.go  config_get.go  config_list.go  config_set.go  debugging.go  debugging_test.go  deploy.go  deployment.go  deployment_test.go  destroy.go  detailedDiff.go  detailedDiff_test.go  diff.go  doc.go  downloadProgress.go  engine.go  env.go  env_current.go  env_info.go  env_init.go  env_list.go  env_remove.go  env_select.go  errors.go  event_emitter.go  events.go  events_test.go  eventsink.go  import.go  install_manager.go  journal.go  journal_extension_test.go  (+27 more)
pkg/graph/: BUILD.bazel  graph.go  node.go  toposort.go  topsort.go  vertex.go
pkg/importer/: BUILD.bazel  hcl2.go  hcl2_rapid_test.go  hcl2_rapidresource_test.go  hcl2_test.go  language.go  language_test.go
pkg/operations/: BUILD.bazel  awsConnection.go  doc.go  operations.go  operations_aws.go  operations_aws_test.go  operations_cloud_aws.go  operations_cloud_aws.go.no  operations_cloud_aws_test.go  operations_cloud_aws_test.go.no  operations_gcp.go  operations_gcp.go.no  operations_plugin.go  resources.go  resources_cloud.go  resources_test.go
pkg/pluginstorage/: BUILD.bazel  content.go  download.go  fs.go  pluginstorage.go
pkg/secrets/: BUILD.bazel  manager.go  manager_test.go  mock.go  provider.go
pkg/util/: BUILD.bazel  assert.go  display.go  env.go  fail.go  known_runtimes_gen.go  plugin.go  plugin_test.go  result.go  (+1 more)
release-orchestrator/: Pulumi.yaml  README.md  __main__.py  pyproject.toml
sdk/: .version  BUILD.bazel  README.md  Taskfile.yml  go.mod  go.sum  module.nix  policy_proxy.go  policy_proxy_test.go  version.go
tests/: .gitignore  BUILD.bazel  README.md  Taskfile.yml  about_test.go  config_test.go  creds_test.go  go.mod  go.sum  history_test.go  init_test.go  login_test.go  main_test.go  new_test.go  parameterisation_test.go  policy_new_test.go  policy_test.go  preview_only_test.go  project_test.go  pulumi_test.go  remote_test.go  roundtrip_test.go  smoke_test.go  stack_test.go  templates_test.go
(+40729 files in other folders)
