load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/pulumi/pulumi
# gazelle:go_naming_convention import_alias
# gazelle:exclude testdata
# gazelle:exclude **/testdata
# gazelle:exclude tests/integration
# gazelle:exclude tests/benchmarks
# gazelle:exclude tests/roundtrip
# gazelle:exclude developer-docs
# gazelle:exclude docs
# gazelle:exclude coverage
# gazelle:exclude changelog
# Exclude intentionally broken test code
# gazelle:exclude sdk/go/auto/test/errors/compilation_error
# gazelle:exclude sdk/python/lib/test/automation/errors/compilation_error
# gazelle:exclude cmd/pulumi-test-language
# gazelle:exclude remote-test-infra

# Exclude Python and Node.js SDKs - they use manual BUILD files
# gazelle:exclude sdk/python
# gazelle:exclude sdk/nodejs

# Resolve proto imports to the sdk/proto/go location
# gazelle:resolve go github.com/pulumi/pulumi/sdk/v3/proto/go //sdk/proto/go
# gazelle:resolve go github.com/pulumi/pulumi/sdk/v3/proto/go/testing //sdk/proto/go/testing
# gazelle:resolve go github.com/pulumi/pulumi/sdk/v3/proto/go/codegen //sdk/proto/go/codegen

# Resolve SDK subpackage imports to local targets (not external @com_github_pulumi_pulumi_sdk_v3)
# gazelle:resolve go github.com/pulumi/pulumi/sdk/v3/nodejs/npm //sdk/nodejs/npm
# gazelle:resolve go github.com/pulumi/pulumi/sdk/v3/python/toolchain //sdk/python/toolchain
# gazelle:resolve go github.com/pulumi/pulumi/sdk/go/pulumi-language-go/v3/buildutil //sdk/go/pulumi-language-go/buildutil
# gazelle:resolve go github.com/pulumi/pulumi/sdk/go/pulumi-language-go/v3/goversion //sdk/go/pulumi-language-go/goversion
# gazelle:resolve go github.com/pulumi/pulumi/sdk/pcl/v3/runtime //sdk/pcl/runtime

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=pkg/go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
