load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "_golangci",
    srcs = ["rules.go"],
    importpath = "github.com/pulumi/pulumi/.golangci",
    visibility = ["//visibility:public"],
    deps = ["@com_github_quasilyte_go_ruleguard_dsl//:dsl"],
)

alias(
    name = "go_default_library",
    actual = ":_golangci",
    visibility = ["//visibility:public"],
)
