[project]
name = "release-orchestrator"
version = "0.1.0"
description = "AWS Step Functions workflow for the pulumi/pulumi release."
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34",
  "cryptography>=42",     # GitHub App JWT signing
  "requests>=2.32",
]

[project.optional-dependencies]
infra = [
  "pulumi>=3.130",
  "pulumi-aws>=6.50",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "responses>=0.25",      # HTTP mocking
  "moto[all]>=5",         # AWS mocking
  "ruff>=0.6",
]

[tool.uv.sources]
# (no overrides yet)

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulumi_release"]
