load("@rules_go//go:def.bzl", "go_library", "go_test")

# SDK module BUILD file - managed by gazelle
exports_files([
    "go.mod",
    "go.sum",
])

# Filegroup containing all SDK Go source files for use as test data
# This allows codegen tests to do go mod replace with the local SDK
filegroup(
    name = "sdk_files",
    srcs = glob(
        ["**/*.go"],
        exclude = ["**/*_test.go"],
    ) + [
        ".version",
        "go.mod",
        "go.sum",
    ],
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/pulumi/pulumi/sdk/v3

go_library(
    name = "sdk",
    srcs = [
        "policy_proxy.go",
        "version.go",
    ],
    embedsrcs = [".version"],
    importpath = "github.com/pulumi/pulumi/sdk/v3",
    visibility = ["//visibility:public"],
    deps = [
        "//sdk/go/common/promise",
        "//sdk/go/common/util/contract",
        "//sdk/go/common/util/logging",
        "//sdk/go/common/util/rpcutil",
        "//sdk/proto/go",
        "@com_github_blang_semver//:semver",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

alias(
    name = "go_default_library",
    actual = ":sdk",
    visibility = ["//visibility:public"],
)

go_test(
    name = "sdk_test",
    srcs = ["policy_proxy_test.go"],
    embed = [":sdk"],
    deps = [
        "//sdk/proto/go",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
