load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "pulumi-test-language_lib",
    srcs = [
        "bad_provider.go",
        "interface.go",
        "main.go",
        "simple_provider.go",
        "testing.go",
        "tests.go",
    ],
    embedsrcs = [
        "testdata/l1-empty/main.pp",
        "testdata/l1-output-bool/main.pp",
        "testdata/l2-resource-simple/main.pp",
        "testdata/snapshots/projects/l1-empty/Pulumi.yaml",
        "testdata/snapshots/projects/l2-resource-simple/Pulumi.yaml",
        "testdata/snapshots/sdks/simple-1.0.0/test.txt",
        "testdata/snapshots_bad/projects/l1-empty/Pulumi.yaml",
        "testdata/snapshots_bad/sdks/simple-1.0.0/test.txt",
    ],
    importpath = "github.com/pulumi/pulumi/cmd/pulumi-test-language",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/pulumi:go",
        "//proto/pulumi/testing",
        "@com_github_blang_semver//:semver",
        "//pkg/backend:go_default_library",
        "//pkg/backend/display:go_default_library",
        "//pkg/backend/filestate:go_default_library",
        "//pkg/codegen/schema:go_default_library",
        "//pkg/display:go_default_library",
        "//pkg/engine:go_default_library",
        "//pkg/resource/deploy:go_default_library",
        "//pkg/resource/stack:go_default_library",
        "//pkg/secrets/b64:go_default_library",
        "//sdk/go/common/diag:go_default_library",
        "//sdk/go/common/diag/colors:go_default_library",
        "//sdk/go/common/resource:go_default_library",
        "//sdk/go/common/resource/config:go_default_library",
        "//sdk/go/common/resource/plugin:go_default_library",
        "//sdk/go/common/tokens:go_default_library",
        "//sdk/go/common/util/cmdutil:go_default_library",
        "//sdk/go/common/util/contract:go_default_library",
        "//sdk/go/common/util/result:go_default_library",
        "//sdk/go/common/util/rpcutil:go_default_library",
        "//sdk/go/common/workspace:go_default_library",
        "@com_github_segmentio_encoding//json",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "pulumi-test-language",
    embed = [":pulumi-test-language_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "pulumi-test-language_test",
    srcs = [
        "interface_test.go",
        "internal_test.go",
        "l1empty_test.go",
        "l2resourcesimple_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":pulumi-test-language_lib"],
    deps = [
        "//proto/pulumi:go",
        "//proto/pulumi/testing",
        "//sdk/go/common/resource:go_default_library",
        "//sdk/go/common/util/rpcutil:go_default_library",
        "//sdk/go/common/workspace:go_default_library",
        "@com_github_segmentio_encoding//json",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)
