load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "pulumi-test-language_lib",
    srcs = [
        "bad_provider.go",
        "interface.go",
        "main.go",
        "simple_provider.go",
        "testing.go",
        "tests.go",
    ],
    embedsrcs = [
        "testdata/l1-empty/main.pp",
        "testdata/l1-output-bool/main.pp",
        "testdata/l2-resource-simple/main.pp",
        "testdata/snapshots/projects/l1-empty/Pulumi.yaml",
        "testdata/snapshots/projects/l2-resource-simple/Pulumi.yaml",
        "testdata/snapshots/sdks/simple-1.0.0/test.txt",
        "testdata/snapshots_bad/projects/l1-empty/Pulumi.yaml",
        "testdata/snapshots_bad/sdks/simple-1.0.0/test.txt",
    ],
    importpath = "github.com/pulumi/pulumi/cmd/pulumi-test-language",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/backend",
        "//pkg/backend/display",
        "//pkg/backend/filestate",
        "//pkg/codegen/schema",
        "//pkg/display",
        "//pkg/engine",
        "//pkg/resource/deploy",
        "//pkg/resource/stack",
        "//pkg/secrets/b64",
        "//proto/pulumi:pulumirpc_go_proto",
        "//proto/pulumi/testing:testing_go_proto",
        "//sdk/go/common/diag",
        "//sdk/go/common/diag/colors",
        "//sdk/go/common/resource",
        "//sdk/go/common/resource/config",
        "//sdk/go/common/resource/plugin",
        "//sdk/go/common/tokens",
        "//sdk/go/common/util/cmdutil",
        "//sdk/go/common/util/contract",
        "//sdk/go/common/util/result",
        "//sdk/go/common/util/rpcutil",
        "//sdk/go/common/workspace",
        "@com_github_blang_semver//:semver",
        "@com_github_segmentio_encoding//json",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "pulumi-test-language",
    embed = [":pulumi-test-language_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "pulumi-test-language_test",
    srcs = [
        "interface_test.go",
        "internal_test.go",
        "l1empty_test.go",
        "l2resourcesimple_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":pulumi-test-language_lib"],
    deps = [
        "//proto/pulumi:pulumirpc_go_proto",
        "//proto/pulumi/testing:testing_go_proto",
        "//sdk/go/common/resource",
        "//sdk/go/common/util/rpcutil",
        "//sdk/go/common/workspace",
        "@com_github_segmentio_encoding//json",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)
