load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "backend",
    srcs = [
        "apply.go",
        "backend.go",
        "cancellation_scope.go",
        "doc.go",
        "errors.go",
        "mock.go",
        "policypack.go",
        "query.go",
        "snapshot.go",
        "stack.go",
        "updates.go",
        "watch.go",
    ],
    importpath = "github.com/example/project/pkg/backend",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_alecaivazis_survey_v2//:survey",
        "@com_github_alecaivazis_survey_v2//core",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pulumi_esc//:esc",
        "//pkg/backend/display:go_default_library",
        "//pkg/display:go_default_library",
        "//pkg/engine:go_default_library",
        "//pkg/operations:go_default_library",
        "//pkg/resource/deploy:go_default_library",
        "//pkg/resource/stack:go_default_library",
        "//pkg/secrets:go_default_library",
        "//pkg/util/cancel:go_default_library",
        "//pkg/version:go_default_library",
        "//sdk/go/common/apitype:go_default_library",
        "//sdk/go/common/diag:go_default_library",
        "//sdk/go/common/diag/colors:go_default_library",
        "//sdk/go/common/env:go_default_library",
        "//sdk/go/common/resource:go_default_library",
        "//sdk/go/common/resource/config:go_default_library",
        "//sdk/go/common/resource/plugin:go_default_library",
        "//sdk/go/common/tokens:go_default_library",
        "//sdk/go/common/util/cmdutil:go_default_library",
        "//sdk/go/common/util/contract:go_default_library",
        "//sdk/go/common/util/gitutil:go_default_library",
        "//sdk/go/common/util/logging:go_default_library",
        "//sdk/go/common/util/result:go_default_library",
        "//sdk/go/common/workspace:go_default_library",
    ],
)

go_test(
    name = "backend_test",
    srcs = [
        "apply_test.go",
        "backend_test.go",
        "snapshot_test.go",
    ],
    embed = [":backend"],
    deps = [
        "//pkg/display:go_default_library",
        "//pkg/engine:go_default_library",
        "//pkg/resource/deploy:go_default_library",
        "//pkg/resource/stack:go_default_library",
        "//pkg/secrets:go_default_library",
        "//pkg/secrets/b64:go_default_library",
        "//pkg/version:go_default_library",
        "//sdk/go/common/env:go_default_library",
        "//sdk/go/common/resource:go_default_library",
        "//sdk/go/common/resource/config:go_default_library",
        "//sdk/go/common/resource/plugin:go_default_library",
        "//sdk/go/common/tokens:go_default_library",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
