load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "backend",
    srcs = [
        "apply.go",
        "backend.go",
        "cancellation_scope.go",
        "doc.go",
        "errors.go",
        "mock.go",
        "policypack.go",
        "query.go",
        "snapshot.go",
        "stack.go",
        "updates.go",
        "watch.go",
    ],
    importpath = "github.com/pulumi/pulumi/pkg/v3/backend",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/backend/display",
        "//pkg/display",
        "//pkg/engine",
        "//pkg/operations",
        "//pkg/resource/deploy",
        "//pkg/resource/stack",
        "//pkg/secrets",
        "//pkg/util/cancel",
        "//pkg/version",
        "//sdk/go/common/apitype",
        "//sdk/go/common/diag",
        "//sdk/go/common/diag/colors",
        "//sdk/go/common/env",
        "//sdk/go/common/resource",
        "//sdk/go/common/resource/config",
        "//sdk/go/common/resource/plugin",
        "//sdk/go/common/tokens",
        "//sdk/go/common/util/cmdutil",
        "//sdk/go/common/util/contract",
        "//sdk/go/common/util/gitutil",
        "//sdk/go/common/util/logging",
        "//sdk/go/common/util/result",
        "//sdk/go/common/workspace",
        "@com_github_alecaivazis_survey_v2//:survey",
        "@com_github_alecaivazis_survey_v2//core",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pulumi_esc//:esc",
    ],
)

alias(
    name = "go_default_library",
    actual = ":backend",
    visibility = ["//visibility:public"],
)

go_test(
    name = "backend_test",
    srcs = [
        "apply_test.go",
        "backend_test.go",
        "snapshot_test.go",
    ],
    embed = [":backend"],
    deps = [
        "//pkg/display",
        "//pkg/engine",
        "//pkg/resource/deploy",
        "//pkg/resource/stack",
        "//pkg/secrets",
        "//pkg/secrets/b64",
        "//pkg/version",
        "//sdk/go/common/env",
        "//sdk/go/common/resource",
        "//sdk/go/common/resource/config",
        "//sdk/go/common/resource/plugin",
        "//sdk/go/common/tokens",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
